# vpn-client

./: .gitignore  CMakeLists.txt  stop
.github/workflows/: build.yml
include/common/: log.hpp
include/ipc/: messages.hpp  pipe_server.hpp
include/net/: route_dns.hpp  wfp_manager.hpp
include/security/: dpapi.hpp
include/service/: service.hpp
include/vpn/: openvpn_handler.hpp  wireguard_handler.hpp
src/common/: log.cpp
src/ipc/: pipe_server.cpp
src/net/: route_dns.cpp  wfp_manager.cpp
src/security/: dpapi.cpp
src/service/: console_main.cpp  service.cpp  service_main.cpp
src/vpn/: openvpn_handler.cpp  wireguard_handler.cpp
tools/: svcctl.cpp  test_ipc.cpp  vpnctl.cpp
